// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Get All Positions Should give unauthorized error if no auth token is provided 1`] = `
{
  "error": "Unauthorized",
  "message": "Missing authentication",
  "statusCode": 401,
}
`;

exports[`Get All Positions Should return all active positions of the user 1`] = `
[
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_images_url": [
      "https://example.com/images/tennis-main.jpg",
    ],
    "event_status": "open",
    "fill_count": 0,
    "final_indicative_return": 4,
    "indicative_payout": 469.06,
    "indicative_pnl": 469.06,
    "indicative_return": 2661.825,
    "is_leveraged": true,
    "last_update_time": "2025-10-03T06:38:29.264902408Z",
    "payout_return_for_new_wagers": 4,
    "pledge": 5151.44,
    "positions": [
      {
        "created_at": "<TS>",
        "current_probability": 0.961,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000001",
          "code": "DEV-000001",
          "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/tennis-main.jpg",
          ],
          "name": "2025 Pro Tennis Championship",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "TENNISCHAMP2025",
        },
        "event_id": "DEV-000001",
        "event_outcome": {
          "_id": "68c9334ab01f0b71bbc1feb0",
          "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
          "event_id": "68c9334ab01f0b71bbc1fea9",
          "index": 0,
          "name": "Top Seeded Player Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 4,
        "id": "DEV-000001_A",
        "indicative_payout": 392.19,
        "indicative_pnl": 392.19,
        "indicative_return": 7.832,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T06:38:25.004201908Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 4,
        "pledge": 5007.44,
        "probability": 0.961,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 5007.44,
        "wager_id": "DEV-000001_A",
        "wager_position_id": "DEV-000001_A",
        "wagered_at": "2025-10-03T06:38:25.004201908Z",
      },
      {
        "created_at": "<TS>",
        "current_probability": 0.961,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000001",
          "code": "DEV-000001",
          "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/tennis-main.jpg",
          ],
          "name": "2025 Pro Tennis Championship",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "TENNISCHAMP2025",
        },
        "event_id": "DEV-000001",
        "event_outcome": {
          "_id": "68c9334ab01f0b71bbc1feb0",
          "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
          "event_id": "68c9334ab01f0b71bbc1fea9",
          "index": 0,
          "name": "Top Seeded Player Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 4,
        "id": "DEV-000001_A",
        "indicative_payout": 24.13,
        "indicative_pnl": 24.13,
        "indicative_return": 16.993,
        "is_leveraged": true,
        "last_reason": null,
        "last_update_time": "2025-10-03T06:38:29.264902408Z",
        "leverage": 2.338,
        "payout_return_for_new_wagers": 4,
        "pledge": 142,
        "probability": 0.961,
        "probability_change": null,
        "stop_distance": 0.08,
        "stop_probability": 0.881,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 331.99,
        "wager_id": "DEV-000001_A",
        "wager_position_id": "DEV-000001_A",
        "wagered_at": "2025-10-03T06:38:29.264902408Z",
      },
      {
        "created_at": "<TS>",
        "current_probability": 0.019,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000001",
          "code": "DEV-000001",
          "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/tennis-main.jpg",
          ],
          "name": "2025 Pro Tennis Championship",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "TENNISCHAMP2025",
        },
        "event_id": "DEV-000001",
        "event_outcome": {
          "_id": "68c9334ab01f0b71bbc1feb8",
          "description": "An underdog player defeats higher-ranked opponents and claims the title",
          "event_id": "68c9334ab01f0b71bbc1fea9",
          "index": 2,
          "name": "Underdog Player Wins",
        },
        "event_outcome_id": "C",
        "final_indicative_return": 4686,
        "id": "DEV-000001_C",
        "indicative_payout": 52.74,
        "indicative_pnl": 52.74,
        "indicative_return": 2637,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-02T06:46:26.314030420Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 4686,
        "pledge": 2,
        "probability": 0.019,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 2,
        "wager_id": "DEV-000001_C",
        "wager_position_id": "DEV-000001_C",
        "wagered_at": "2025-10-02T06:46:26.314030420Z",
      },
    ],
    "probability_change": null,
    "realized_payout": 0,
    "realized_pnl": 0,
    "realized_return": 0,
    "trader_id": "T-000001",
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 5341.43,
    "wagered_at": "2025-10-03T06:38:29.264902408Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.379,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000002",
      "code": "DEV-000002",
      "description": "Who will win the 2025 Global Education Excellence Prize? The resolution will be based on the official announcement from the International Education Board.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/education-main.jpg",
      ],
      "name": "2025 Global Education Excellence Prize",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "EDUPRIZE2025",
    },
    "event_id": "DEV-000002",
    "event_images_url": [
      "https://example.com/images/education-main.jpg",
    ],
    "event_status": "open",
    "fill_count": 0,
    "final_indicative_return": 160,
    "indicative_payout": 45.47,
    "indicative_pnl": 45.47,
    "indicative_return": 354.55,
    "is_leveraged": false,
    "last_update_time": "2025-10-02T06:48:53.812621304Z",
    "payout_return_for_new_wagers": 160,
    "pledge": 24,
    "positions": [
      {
        "created_at": "<TS>",
        "current_probability": 0.379,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000002",
          "code": "DEV-000002",
          "description": "Who will win the 2025 Global Education Excellence Prize? The resolution will be based on the official announcement from the International Education Board.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/education-main.jpg",
          ],
          "name": "2025 Global Education Excellence Prize",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "EDUPRIZE2025",
        },
        "event_id": "DEV-000002",
        "event_outcome": {
          "_id": "68c934782bacf3f620409780",
          "description": "A global university is honored for outstanding contributions to education",
          "event_id": "68c934782bacf3f620409779",
          "index": 0,
          "name": "University Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 160,
        "id": "DEV-000002_A",
        "indicative_payout": 6.36,
        "indicative_pnl": 6.36,
        "indicative_return": 159,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-02T06:48:00.151581463Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 160,
        "pledge": 4,
        "probability": 0.379,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 4,
        "wager_id": "DEV-000002_A",
        "wager_position_id": "DEV-000002_A",
        "wagered_at": "2025-10-02T06:48:00.151581463Z",
      },
      {
        "created_at": "<TS>",
        "current_probability": 0.323,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000002",
          "code": "DEV-000002",
          "description": "Who will win the 2025 Global Education Excellence Prize? The resolution will be based on the official announcement from the International Education Board.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/education-main.jpg",
          ],
          "name": "2025 Global Education Excellence Prize",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "EDUPRIZE2025",
        },
        "event_id": "DEV-000002",
        "event_outcome": {
          "_id": "68c934782bacf3f620409788",
          "description": "An outstanding educator is recognized for excellence in teaching",
          "event_id": "68c934782bacf3f620409779",
          "index": 2,
          "name": "Individual Educator Wins",
        },
        "event_outcome_id": "C",
        "final_indicative_return": 204,
        "id": "DEV-000002_C",
        "indicative_payout": 39.11,
        "indicative_pnl": 39.11,
        "indicative_return": 195.55,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-02T06:48:53.812621304Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 204,
        "pledge": 20,
        "probability": 0.323,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 20,
        "wager_id": "DEV-000002_C",
        "wager_position_id": "DEV-000002_C",
        "wagered_at": "2025-10-02T06:48:53.812621304Z",
      },
    ],
    "probability_change": null,
    "realized_payout": 0,
    "realized_pnl": 0,
    "realized_return": 0,
    "trader_id": "T-000001",
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 24,
    "wagered_at": "2025-10-02T06:48:53.812621304Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.355,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000005",
      "code": "DEV-000005",
      "description": "Which company, lab, or researcher will win the 2025 Global AI Innovation Prize? The market resolves based on the official announcement from the International AI Alliance.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759215861731-Signature.jpg",
        "https://example.com/images/aiinnovation-main.jpg",
      ],
      "name": "2025 Global AI Innovation Prize",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "AIINNOV2025",
    },
    "event_id": "DEV-000005",
    "event_images_url": [
      "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759215861731-Signature.jpg",
      "https://example.com/images/aiinnovation-main.jpg",
    ],
    "event_status": "open",
    "fill_count": 0,
    "final_indicative_return": 176,
    "indicative_payout": 26.64,
    "indicative_pnl": 26.64,
    "indicative_return": 177.6,
    "is_leveraged": false,
    "last_update_time": "2025-10-03T06:29:02.527792214Z",
    "payout_return_for_new_wagers": 176,
    "pledge": 15,
    "positions": [
      {
        "created_at": "<TS>",
        "current_probability": 0.355,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000005",
          "code": "DEV-000005",
          "description": "Which company, lab, or researcher will win the 2025 Global AI Innovation Prize? The market resolves based on the official announcement from the International AI Alliance.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://everyx-dev-public.s3.eu-west-1.amazonaws.com/upload/1759215861731-Signature.jpg",
            "https://example.com/images/aiinnovation-main.jpg",
          ],
          "name": "2025 Global AI Innovation Prize",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "AIINNOV2025",
        },
        "event_id": "DEV-000005",
        "event_outcome": {
          "_id": "68cd2616c210f6f963b9bce4",
          "description": "A global AI research lab is recognized for breakthrough innovation",
          "event_id": "68cd2616c210f6f963b9bcdd",
          "index": 0,
          "name": "AI Research Lab Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 176,
        "id": "DEV-000005_A",
        "indicative_payout": 26.64,
        "indicative_pnl": 26.64,
        "indicative_return": 177.6,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T06:29:02.527792214Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 176,
        "pledge": 15,
        "probability": 0.355,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 15,
        "wager_id": "DEV-000005_A",
        "wager_position_id": "DEV-000005_A",
        "wagered_at": "2025-10-03T06:29:02.527792214Z",
      },
    ],
    "probability_change": null,
    "realized_payout": 0,
    "realized_pnl": 0,
    "realized_return": 0,
    "trader_id": "T-000001",
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 15,
    "wagered_at": "2025-10-03T06:29:02.527792214Z",
  },
]
`;

exports[`Get All Positions should give all inactive positions of the user 1`] = `
[
  {
    "created_at": "<TS>",
    "current_probability": null,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000004",
      "code": "DEV-000004",
      "description": "A mixed-format showmatch combining professional tennis exhibition matches and competitive CS esports showcases. Which side (tennis players, esports teams or other entrants) will be declared overall winner by the organizers?",
      "ends_at": "2025-09-24T09:29:00.000Z",
      "event_images_url": [
        "https://example.com/images/plxcs-tennis-main.jpg",
      ],
      "name": "2025 PLxCS Tennis & Esports Showmatch",
      "resolved_outcome_id": null,
      "status": "inactive",
      "ticker": "PLXCS_TENNIS2025",
    },
    "event_id": "DEV-000004",
    "event_images_url": [
      "https://example.com/images/plxcs-tennis-main.jpg",
    ],
    "event_status": "resolved",
    "fill_count": 0,
    "final_indicative_return": 0,
    "indicative_payout": 0,
    "indicative_pnl": 0,
    "indicative_return": 0,
    "is_leveraged": false,
    "last_update_time": "2025-09-24T09:29:13.665617488Z",
    "payout_return_for_new_wagers": 0,
    "pledge": 10,
    "positions": [
      {
        "created_at": "<TS>",
        "current_probability": 0,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000004",
          "code": "DEV-000004",
          "description": "A mixed-format showmatch combining professional tennis exhibition matches and competitive CS esports showcases. Which side (tennis players, esports teams or other entrants) will be declared overall winner by the organizers?",
          "ends_at": "2025-09-24T09:29:00.000Z",
          "event_images_url": [
            "https://example.com/images/plxcs-tennis-main.jpg",
          ],
          "name": "2025 PLxCS Tennis & Esports Showmatch",
          "resolved_outcome_id": null,
          "status": "inactive",
          "ticker": "PLXCS_TENNIS2025",
        },
        "event_id": "DEV-000004",
        "event_outcome": {
          "_id": "68c94b804e23d3a68c79a794",
          "description": "A team composed of professional tennis players is declared the overall winner.",
          "event_id": "68c94b804e23d3a68c79a78d",
          "index": 0,
          "name": "Pro Tennis Players Team Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 0,
        "id": "102",
        "is_leveraged": false,
        "last_reason": "LOSS",
        "last_update_time": "2025-09-24T09:29:13.665617488Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 0,
        "pledge": 10,
        "probability": 0,
        "probability_change": null,
        "realized_payoff": 0,
        "realized_payout": 0,
        "realized_pnl": -10,
        "realized_return": -100,
        "stop_distance": 0,
        "stop_warning": false,
        "type": "closed",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 10,
        "wager_id": "102",
        "wager_position_id": "102",
        "wagered_at": "2025-09-24T09:29:13.665617488Z",
      },
    ],
    "probability_change": null,
    "realized_payoff": 0,
    "realized_payout": 0,
    "realized_pnl": -10,
    "realized_return": -100,
    "trader_id": "T-000001",
    "type": "closed",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 10,
    "wagered_at": "2025-09-24T09:29:13.665617488Z",
  },
]
`;

exports[`Get Positions of a specific event Should give unauthorized error if no auth token is provided 1`] = `
{
  "error": "Unauthorized",
  "message": "Missing authentication",
  "statusCode": 401,
}
`;

exports[`Get Positions of a specific event Should return all positions of the event 1`] = `
[
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_images_url": [
      "https://example.com/images/tennis-main.jpg",
    ],
    "event_status": "open",
    "fill_count": 0,
    "final_indicative_return": 4,
    "indicative_payout": 469.06,
    "indicative_pnl": 469.06,
    "indicative_return": 2661.825,
    "is_leveraged": true,
    "last_update_time": "2025-10-03T06:38:29.264902408Z",
    "payout_return_for_new_wagers": 4,
    "pledge": 5151.44,
    "positions": [
      {
        "created_at": "<TS>",
        "current_probability": 0.961,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000001",
          "code": "DEV-000001",
          "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/tennis-main.jpg",
          ],
          "name": "2025 Pro Tennis Championship",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "TENNISCHAMP2025",
        },
        "event_id": "DEV-000001",
        "event_outcome": {
          "_id": "68c9334ab01f0b71bbc1feb0",
          "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
          "event_id": "68c9334ab01f0b71bbc1fea9",
          "index": 0,
          "name": "Top Seeded Player Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 4,
        "id": "DEV-000001_A",
        "indicative_payout": 392.19,
        "indicative_pnl": 392.19,
        "indicative_return": 7.832,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-03T06:38:25.004201908Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 4,
        "pledge": 5007.44,
        "probability": 0.961,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 5007.44,
        "wager_id": "DEV-000001_A",
        "wager_position_id": "DEV-000001_A",
        "wagered_at": "2025-10-03T06:38:25.004201908Z",
      },
      {
        "created_at": "<TS>",
        "current_probability": 0.961,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000001",
          "code": "DEV-000001",
          "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/tennis-main.jpg",
          ],
          "name": "2025 Pro Tennis Championship",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "TENNISCHAMP2025",
        },
        "event_id": "DEV-000001",
        "event_outcome": {
          "_id": "68c9334ab01f0b71bbc1feb0",
          "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
          "event_id": "68c9334ab01f0b71bbc1fea9",
          "index": 0,
          "name": "Top Seeded Player Wins",
        },
        "event_outcome_id": "A",
        "final_indicative_return": 4,
        "id": "DEV-000001_A",
        "indicative_payout": 24.13,
        "indicative_pnl": 24.13,
        "indicative_return": 16.993,
        "is_leveraged": true,
        "last_reason": null,
        "last_update_time": "2025-10-03T06:38:29.264902408Z",
        "leverage": 2.338,
        "payout_return_for_new_wagers": 4,
        "pledge": 142,
        "probability": 0.961,
        "probability_change": null,
        "stop_distance": 0.08,
        "stop_probability": 0.881,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 331.99,
        "wager_id": "DEV-000001_A",
        "wager_position_id": "DEV-000001_A",
        "wagered_at": "2025-10-03T06:38:29.264902408Z",
      },
      {
        "created_at": "<TS>",
        "current_probability": 0.019,
        "entry_probability": null,
        "event": {
          "_id": "DEV-000001",
          "code": "DEV-000001",
          "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
          "ends_at": "2025-10-29T14:00:00.000Z",
          "event_images_url": [
            "https://example.com/images/tennis-main.jpg",
          ],
          "name": "2025 Pro Tennis Championship",
          "resolved_outcome_id": null,
          "status": "active",
          "ticker": "TENNISCHAMP2025",
        },
        "event_id": "DEV-000001",
        "event_outcome": {
          "_id": "68c9334ab01f0b71bbc1feb8",
          "description": "An underdog player defeats higher-ranked opponents and claims the title",
          "event_id": "68c9334ab01f0b71bbc1fea9",
          "index": 2,
          "name": "Underdog Player Wins",
        },
        "event_outcome_id": "C",
        "final_indicative_return": 4686,
        "id": "DEV-000001_C",
        "indicative_payout": 52.74,
        "indicative_pnl": 52.74,
        "indicative_return": 2637,
        "is_leveraged": false,
        "last_reason": null,
        "last_update_time": "2025-10-02T06:46:26.314030420Z",
        "leverage": 1,
        "payout_return_for_new_wagers": 4686,
        "pledge": 2,
        "probability": 0.019,
        "probability_change": null,
        "stop_distance": 0,
        "stop_probability": 0,
        "stop_warning": false,
        "type": "open",
        "user_id": "68b9b7e11d6e590c748a0177",
        "wager": 2,
        "wager_id": "DEV-000001_C",
        "wager_position_id": "DEV-000001_C",
        "wagered_at": "2025-10-02T06:46:26.314030420Z",
      },
    ],
    "probability_change": null,
    "realized_payout": 0,
    "realized_pnl": 0,
    "realized_return": 0,
    "trader_id": "T-000001",
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 5341.43,
    "wagered_at": "2025-10-03T06:38:29.264902408Z",
  },
]
`;

exports[`Positions Verification Should create a leveraged position for the event outcome after wager creation 1`] = `
[
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb0",
      "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 0,
      "name": "Top Seeded Player Wins",
    },
    "event_outcome_id": "A",
    "final_indicative_return": 4,
    "id": "DEV-000001_A",
    "indicative_payout": 392.02,
    "indicative_pnl": 392.02,
    "indicative_return": 7.826,
    "is_leveraged": false,
    "last_reason": null,
    "last_update_time": "2025-10-03T06:39:18.262396541Z",
    "leverage": 1,
    "payout_return_for_new_wagers": 4,
    "pledge": 5009.44,
    "probability": 0.961,
    "probability_change": null,
    "stop_distance": 0,
    "stop_probability": 0,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 5009.44,
    "wager_id": "DEV-000001_A",
    "wager_position_id": "DEV-000001_A",
    "wagered_at": "2025-10-03T06:39:18.262396541Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb0",
      "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 0,
      "name": "Top Seeded Player Wins",
    },
    "event_outcome_id": "A",
    "final_indicative_return": 4,
    "id": "DEV-000001_A",
    "indicative_payout": 24.44,
    "indicative_pnl": 24.44,
    "indicative_return": 16.972,
    "is_leveraged": true,
    "last_reason": null,
    "last_update_time": "2025-10-03T06:39:20.361237645Z",
    "leverage": 2.361,
    "payout_return_for_new_wagers": 4,
    "pledge": 144,
    "probability": 0.961,
    "probability_change": null,
    "stop_distance": 0.078,
    "stop_probability": 0.883,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 339.99,
    "wager_id": "DEV-000001_A",
    "wager_position_id": "DEV-000001_A",
    "wagered_at": "2025-10-03T06:39:20.361237645Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.019,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb8",
      "description": "An underdog player defeats higher-ranked opponents and claims the title",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 2,
      "name": "Underdog Player Wins",
    },
    "event_outcome_id": "C",
    "final_indicative_return": 4689.5,
    "id": "DEV-000001_C",
    "indicative_payout": 52.76,
    "indicative_pnl": 52.76,
    "indicative_return": 2638,
    "is_leveraged": false,
    "last_reason": null,
    "last_update_time": "2025-10-02T06:46:26.314030420Z",
    "leverage": 1,
    "payout_return_for_new_wagers": 4689.5,
    "pledge": 2,
    "probability": 0.019,
    "probability_change": null,
    "stop_distance": 0,
    "stop_probability": 0,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 2,
    "wager_id": "DEV-000001_C",
    "wager_position_id": "DEV-000001_C",
    "wagered_at": "2025-10-02T06:46:26.314030420Z",
  },
]
`;

exports[`Positions Verification Should create a position for the event outcome after wager creation 1`] = `
[
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb0",
      "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 0,
      "name": "Top Seeded Player Wins",
    },
    "event_outcome_id": "A",
    "final_indicative_return": 4,
    "id": "DEV-000001_A",
    "indicative_payout": 392.22,
    "indicative_pnl": 392.22,
    "indicative_return": 7.83,
    "is_leveraged": false,
    "last_reason": null,
    "last_update_time": "2025-10-03T06:39:18.262396541Z",
    "leverage": 1,
    "payout_return_for_new_wagers": 4,
    "pledge": 5009.44,
    "probability": 0.961,
    "probability_change": null,
    "stop_distance": 0,
    "stop_probability": 0,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 5009.44,
    "wager_id": "DEV-000001_A",
    "wager_position_id": "DEV-000001_A",
    "wagered_at": "2025-10-03T06:39:18.262396541Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb0",
      "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 0,
      "name": "Top Seeded Player Wins",
    },
    "event_outcome_id": "A",
    "final_indicative_return": 4,
    "id": "DEV-000001_A",
    "indicative_payout": 24.13,
    "indicative_pnl": 24.13,
    "indicative_return": 16.993,
    "is_leveraged": true,
    "last_reason": null,
    "last_update_time": "2025-10-03T06:38:29.264902408Z",
    "leverage": 2.338,
    "payout_return_for_new_wagers": 4,
    "pledge": 142,
    "probability": 0.961,
    "probability_change": null,
    "stop_distance": 0.08,
    "stop_probability": 0.881,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 331.99,
    "wager_id": "DEV-000001_A",
    "wager_position_id": "DEV-000001_A",
    "wagered_at": "2025-10-03T06:38:29.264902408Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.019,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb8",
      "description": "An underdog player defeats higher-ranked opponents and claims the title",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 2,
      "name": "Underdog Player Wins",
    },
    "event_outcome_id": "C",
    "final_indicative_return": 4688,
    "id": "DEV-000001_C",
    "indicative_payout": 52.76,
    "indicative_pnl": 52.76,
    "indicative_return": 2638,
    "is_leveraged": false,
    "last_reason": null,
    "last_update_time": "2025-10-02T06:46:26.314030420Z",
    "leverage": 1,
    "payout_return_for_new_wagers": 4688,
    "pledge": 2,
    "probability": 0.019,
    "probability_change": null,
    "stop_distance": 0,
    "stop_probability": 0,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 2,
    "wager_id": "DEV-000001_C",
    "wager_position_id": "DEV-000001_C",
    "wagered_at": "2025-10-02T06:46:26.314030420Z",
  },
]
`;

exports[`Positions Verification Should create a position with force_leverage enabled after wager creation 1`] = `
[
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb0",
      "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 0,
      "name": "Top Seeded Player Wins",
    },
    "event_outcome_id": "A",
    "final_indicative_return": 4,
    "id": "DEV-000001_A",
    "indicative_payout": 391.97,
    "indicative_pnl": 391.97,
    "indicative_return": 7.825,
    "is_leveraged": false,
    "last_reason": null,
    "last_update_time": "2025-10-03T06:39:18.262396541Z",
    "leverage": 1,
    "payout_return_for_new_wagers": 4,
    "pledge": 5009.44,
    "probability": 0.961,
    "probability_change": null,
    "stop_distance": 0,
    "stop_probability": 0,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 5009.44,
    "wager_id": "DEV-000001_A",
    "wager_position_id": "DEV-000001_A",
    "wagered_at": "2025-10-03T06:39:18.262396541Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.961,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb0",
      "description": "The highest-seeded player wins the 2025 Pro Tennis Championship",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 0,
      "name": "Top Seeded Player Wins",
    },
    "event_outcome_id": "A",
    "final_indicative_return": 4,
    "id": "DEV-000001_A",
    "indicative_payout": 24.51,
    "indicative_pnl": 24.51,
    "indicative_return": 16.788,
    "is_leveraged": true,
    "last_reason": null,
    "last_update_time": "2025-10-03T06:39:22.562404676Z",
    "leverage": 2.342,
    "payout_return_for_new_wagers": 4,
    "pledge": 146,
    "probability": 0.961,
    "probability_change": null,
    "stop_distance": 0.078,
    "stop_probability": 0.883,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 341.99,
    "wager_id": "DEV-000001_A",
    "wager_position_id": "DEV-000001_A",
    "wagered_at": "2025-10-03T06:39:22.562404676Z",
  },
  {
    "created_at": "<TS>",
    "current_probability": 0.019,
    "entry_probability": null,
    "event": {
      "_id": "DEV-000001",
      "code": "DEV-000001",
      "description": "Who will win the 2025 Pro Tennis Championship? The market resolves based on the official final match results.",
      "ends_at": "2025-10-29T14:00:00.000Z",
      "event_images_url": [
        "https://example.com/images/tennis-main.jpg",
      ],
      "name": "2025 Pro Tennis Championship",
      "resolved_outcome_id": null,
      "status": "active",
      "ticker": "TENNISCHAMP2025",
    },
    "event_id": "DEV-000001",
    "event_outcome": {
      "_id": "68c9334ab01f0b71bbc1feb8",
      "description": "An underdog player defeats higher-ranked opponents and claims the title",
      "event_id": "68c9334ab01f0b71bbc1fea9",
      "index": 2,
      "name": "Underdog Player Wins",
    },
    "event_outcome_id": "C",
    "final_indicative_return": 4689.5,
    "id": "DEV-000001_C",
    "indicative_payout": 52.76,
    "indicative_pnl": 52.76,
    "indicative_return": 2638,
    "is_leveraged": false,
    "last_reason": null,
    "last_update_time": "2025-10-02T06:46:26.314030420Z",
    "leverage": 1,
    "payout_return_for_new_wagers": 4689.5,
    "pledge": 2,
    "probability": 0.019,
    "probability_change": null,
    "stop_distance": 0,
    "stop_probability": 0,
    "stop_warning": false,
    "type": "open",
    "user_id": "68b9b7e11d6e590c748a0177",
    "wager": 2,
    "wager_id": "DEV-000001_C",
    "wager_position_id": "DEV-000001_C",
    "wagered_at": "2025-10-02T06:46:26.314030420Z",
  },
]
`;

exports[`Positions Verification Should return empty positions array when no wagers exist for event 1`] = `[]`;
